# flakes

./: .gitignore  README.md
BWA/: flake.nix
CRISPResso2/: flake.nix  jinja_partials.patch
Concord/: flake.nix  pyproject.toml
D3E/: flake.nix  py3.patch
DMAP/: flake.nix
Ensembl-VEP/: flake.nix  install.patch
FASTQC/: flake.nix
GREAT/: flake.nix
GraphPadPrism/: flake.nix
HTSeq/: flake.nix  pyproject.toml
KMA/: flake.nix
Ktrim/: flake.nix
MACS2/: flake.nix
MAGeCK/: flake.nix  overrides.nix  pyproject.toml
MULTOVL/: flake.nix
NGmerge/: flake.nix
QUBIC2/: flake.nix
RADMeth/: flake.nix
ROSE/: fix_paths.patch  flake.nix  make_sane.patch
RabbitTrim/: flake.nix
RepEnTools/: flake.nix
SCSA/: 2.0  flake.nix
SPAdes/: flake.nix
STAR/: flake.nix
SUPPA/: debug.patch  flake.nix  pyproject.toml
SplAdder/: flake.nix  pyproject.toml
StringTie/: flake.nix  patch-2.2.0.patch
Subread/: flake.nix
Trinity/: flake.nix
WhichTF/: flake.nix  patch_rpy2_dependency.patch
bowtie/: flake.nix
cellbender/: argparse  flake.nix  no_doc.patch
cellstates/: flake.nix  pyproject.toml
cirrocumulus/: flake.nix  overrides.nix  pyproject.toml
cutadapt/: pyproject.toml
dropkick/: flake.nix
fixjson/: flake.nix
gdc-client/: flake.nix
genmap/: flake.nix
ggsashimi/: flake.nix
hashcards/: flake.nix
homer/: flake.nix
httpjail/: flake.nix
llm/: flake.nix  pyproject.toml
meme-suite/: default.nix  flake.nix
noise-suppression-for-voice/: flake.nix
pandaseq/: flake.nix
peakzilla/: flake.nix
piper/: flake.nix
py-spy/: flake.nix
pystack/: flake.nix
rMATS/: bamtools.patch  flake.nix  python_module.patch  test.py
salmon/: flake.nix
scGraphformer/: flake.nix  pyproject.toml  shu
seqfu2/: flake.nix
seqstats/: flake.nix
sratoolkit/: flake.nix
textsnatcher/: flake.nix
trackplot/: flake.nix
trackplots/: pyproject.toml
(+7 files in other folders)
