
[project]
name = "uv2nix-hammer-app"
version = "0.1.0"
description = "SUPPA for diff. splicing"
requires-python = "~=3.12,<3.13"
dependencies = [
	# suppa itself isn't a proper proper package...
	'scipy>=0.15.1',
	'numpy>=1.11.0',
	'pandas>=0.18.0',
	'statsmodels>=0.6.1',
	'scikit-learn>=0.16.1'
]
