[project]
name = "uv2nix-hammer-app"
version = "0.1.0"
description = "Learn to build scGraphformer"
requires-python = ">=3.10,<3.11"
dependencies = [
    "anndata==0.9.2",
    "numpy",
    "pandas==2.0.3",
    "scanpy==1.9.6",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "scvi-tools==0.20.3",
	"torch==2.4.1"
]
